fixed minor issue and added unit tests